@@ -1,5 +1,6 @@
 Changelog for Shake
 
+    Change how progress messages are written
     Do not write a beep in progressDisplay, avoids a beep
     Add exe function to FilePath
 0.9.1
